# devicekit

./: .dockerignore  .gitignore  README.md  docker-bake.hcl  justfile
.github/workflows/: build.yml
device-agent/: .gitignore  Cargo.toml  LICENSE  README.md
device-agent/src/: main.rs  moonlight_codec.rs  moonlight_socket.rs  notifycast.rs
device-agent/src/cli/: daemon.rs  mod.rs  parser.rs  start.rs  status.rs  stop.rs  test_conn.rs
device-agent/src/http_server/: cmd.rs  events.rs  mod.rs  request.rs  response.rs  router.rs  server.rs  socket.rs
device-agent/src/telemetry/: disk.rs  manifest.rs  metrics.rs  mod.rs  network.rs  proc.rs  source.rs  temperature.rs
dockerfiles/: build-alpine.Dockerfile  build-debian.Dockerfile
sdk/: README.md  dl-agent.sh
sdk/elixir/: .credo.exs  .gitignore  README.md  mix.exs
sdk/elixir/lib/: fostrom.ex
sdk/elixir/lib/fostrom/: application.ex  device_agent.ex  events_proc.ex  handler.ex  handler_proc.ex  req.ex
sdk/elixir/lib/mix/tasks/: compile.download_agent.ex  fostrom.setup.ex
sdk/elixir/test/: device_agent_test.exs  handler_proc_test.exs  smoke_test.exs
sdk/js/: README.md  dl-agent.sh  index.js  json.js  manifest.js  package.json
sdk/js/test/: integration.test.js  json.test.js  manifest.test.js  require.test.cjs  smoke.test.js
sdk/python/: README.md  pyproject.toml
sdk/python/src/fostrom/: __init__.py  agent.py  dl-agent.sh  fostrom.py  sse.py
sdk/python/tests/: test_agent.py  test_manifest.py  test_smoke.py  test_sse.py
