[package]
name = "fostrom-device-agent"
version = "0.0.17"
edition = "2024"

[lints.rust]
# unused = "allow"

[lints.clippy]
upper_case_acronyms = "allow"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler

[dependencies]
anyhow = "1.0.98"
ctrlc = { version = "3.5.0", features = ["termination"] }
deku = "0.19.1"
either = "1.15.0"
httpdate = "1.0.3"
nix = { version = "0.30.1", features = ["signal", "process"] }
rand = "0.9.1"
rustls = { version = "0.23.31", default-features = false, features = ["std", "ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
socket2 = "0.6.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
