[package]
name = "fostrom-device-agent"
version = "0.1.0"
edition = "2024"

[lints.rust]
# unused = "allow"

[lints.clippy]
upper_case_acronyms = "allow"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler

[dependencies]
anyhow = "1.0.102"
ctrlc = { version = "3.5.2", features = ["termination"] }
deku = "0.20.3"
either = "1.15.0"
hex = "0.4.3"
httpdate = "1.0.3"
nix = { version = "0.31.2", features = ["signal", "process"] }
rand = "0.10.1"
rustls = { version = "0.23.39", default-features = false, features = ["std", "ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
socket2 = "0.6.3"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
